# rune_embed

./: .gitignore  draw_rune.py  export_onnx.py  infer.py  pyproject.toml  train.py
rune/: dataset.py  model.py
