[project]
name = "rune-embed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "onnxscript>=0.5.6",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[[tool.uv.index]]
name = "pytorch-cu130-nightly"
url = "https://download.pytorch.org/whl/nightly/cu130"
explicit = true
