[project]
name = "rune-embed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "onnxscript>=0.5.6",
    "pygame>=2.6.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[[tool.uv.index]]
name = "pytorch-cu130-nightly"
url = "https://download.pytorch.org/whl/nightly/cu130"
explicit = true
